# BuntScript

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  func.js
bunt-macro/: Cargo.toml
bunt-macro/src/: lib.rs
buntscript-macro/: Cargo.toml
buntscript-macro/src/: lib.rs
script/: bingle.bs  calls.bs  fibo.bs  simple.bs
src/: back.rs  checker.rs  checker_old.rs  errors.rs  front.rs  handle_vec.rs  ir.rs  ir_old.rs  main.rs  middle.rs  name_resolver.rs  prelude.bs  prelude.rs  program.rs  syntax.lalrpop  type_checker.rs  type_context.rs  type_convert.rs  types.rs  util.rs
src/front/: code.rs  front.rs  items.rs  lexer.rs  mod.rs  parser.rs  pre_parse.rs  scopes.rs  types.rs
src/old_front/: ir.rs  lexer.rs  mod.rs  parser.rs  scopes.rs
src/single_pass/: lexer.rs  mod.rs  scopes.rs  single_pass.rs
test/: bingle.bs  number_ops.bs  ops.bs  precedence.bs
test/euler/: 001_multiples.bs  002_fibo.bs  003_factors.bs
