[package]
name = "buntscript"
version = "0.1.0"
edition = "2021"

[dependencies]
buntscript-macro = { path = "./buntscript-macro/" }

logos = "0.14.0"

typed-arena = "2.0.2"
smallvec = "1.13.1"

cranelift = "0.104.0"
cranelift-jit = "0.104.0"
cranelift-native = "0.104.0"
cranelift-module = "0.104.0"
