[package]
name = "buntscript"
version = "0.1.0"
edition = "2021"

[dependencies]
#buntscript-macro = { path = "./buntscript-macro/" }
#typed-arena = "2.0.2"

self_cell = "1.0.4"

smallvec = "1.13.1"

cranelift = "0.104.0"
cranelift-jit = "0.104.0"
cranelift-native = "0.104.0"
cranelift-module = "0.104.0"
